--- a/app/src/main/res/layout/fragment_lawyer.xml
+++ b/app/src/main/res/layout/fragment_lawyer.xml
@@ -96,7 +96,7 @@
                         </android.support.v7.widget.CardView>
 
                         <android.support.v7.widget.CardView
-                            android:id="@+id/btnCommercial"
+                            android:id="@+id/cvChat"
                             android:layout_width="160dp"
                             android:layout_height="190dp"
                             android:layout_marginStart="5dp"
@@ -117,14 +117,14 @@
                                     android:layout_height="64dp"
                                     android:background="@drawable/circle"
                                     android:padding="10dp"
-                                    android:src="@drawable/ic_account_balance_white_24dp" />
+                                    android:src="@drawable/chat" />
 
                                 <TextView
-                                    android:id="@+id/tvCommercial"
+                                    android:id="@+id/tvChat"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="10dp"
-                                    android:text="Title"
+                                    android:text="@string/chat"
                                     android:textStyle="bold" />
 
                                 <View
@@ -134,12 +134,12 @@
                                     android:background="@color/colorGrayLight" />
 
                                 <TextView
-                                    android:id="@+id/tvCommercialMsg"
+                                    android:id="@+id/tvChatMsg"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:gravity="center"
                                     android:padding="5dp"
-                                    android:text="Description"
+                                    android:text="@string/chat_lawyer_msg"
                                     android:textColor="@android:color/darker_gray" />
 
                             </LinearLayout>
@@ -161,7 +161,7 @@
                         app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
                         <android.support.v7.widget.CardView
-                            android:id="@+id/btnIndustrial"
+                            android:id="@+id/cvCredit"
                             android:layout_width="160dp"
                             android:layout_height="190dp"
                             android:layout_marginStart="10dp"
@@ -182,14 +182,14 @@
                                     android:layout_height="64dp"
                                     android:background="@drawable/circle"
                                     android:padding="10dp"
-                                    android:src="@drawable/ic_account_balance_white_24dp" />
+                                    android:src="@drawable/wallet" />
 
                                 <TextView
-                                    android:id="@+id/tvIndustrial"
+                                    android:id="@+id/tvCredit"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="10dp"
-                                    android:text="Title"
+                                    android:text="@string/credits"
                                     android:textStyle="bold" />
 
                                 <View
@@ -199,19 +199,19 @@
                                     android:background="@color/colorGrayLight" />
 
                                 <TextView
-                                    android:id="@+id/tvIndustrialMsg"
+                                    android:id="@+id/tvCreditMsg"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:gravity="center"
                                     android:padding="5dp"
-                                    android:text="Description"
+                                    android:text="@string/manage_credit_msg"
                                     android:textColor="@android:color/darker_gray" />
 
                             </LinearLayout>
                         </android.support.v7.widget.CardView>
 
                         <android.support.v7.widget.CardView
-                            android:id="@+id/btnPublic"
+                            android:id="@+id/cvProfile"
                             android:layout_width="160dp"
                             android:layout_height="190dp"
                             android:layout_marginStart="5dp"
@@ -232,14 +232,14 @@
                                     android:layout_height="64dp"
                                     android:background="@drawable/circle"
                                     android:padding="10dp"
-                                    android:src="@drawable/ic_account_balance_white_24dp" />
+                                    android:src="@drawable/avatar"  />
 
                                 <TextView
-                                    android:id="@+id/tvPublic"
+                                    android:id="@+id/tvProfile"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="10dp"
-                                    android:text="Title"
+                                    android:text="@string/profile"
                                     android:textStyle="bold" />
 
                                 <View
@@ -249,20 +249,21 @@
                                     android:background="@color/colorGrayLight" />
 
                                 <TextView
-                                    android:id="@+id/tvPublicMsg"
+                                    android:id="@+id/tvProfileMsg"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:gravity="center"
                                     android:padding="5dp"
-                                    android:text="Description"
+                                    android:text="@string/profile_msg"
                                     android:textColor="@android:color/darker_gray" />
 
                             </LinearLayout>
+
                         </android.support.v7.widget.CardView>
 
                     </LinearLayout>
 
-                    <LinearLayout
+                    <!--<LinearLayout
                         android:id="@+id/linearLayout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -326,7 +327,7 @@
                             </LinearLayout>
                         </android.support.v7.widget.CardView>
 
-                    </LinearLayout>
+                    </LinearLayout>-->
 
                 </LinearLayout>
 
