--- a/app/src/main/res/menu/menu_case.xml
+++ b/app/src/main/res/menu/menu_case.xml
@@ -3,6 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:title="@string/leave_case"
+        android:id="@+id/nav_leave_case"
+        app:showAsAction="never"/>
+
+    <item
         android:title="@string/report"
         android:id="@+id/nav_report_case"
         app:showAsAction="never"/>
