--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".View.AboutActivity">
+    tools:context=".View.Others.AboutActivity">
 
     <include
         android:id="@+id/toolbar"
