--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".View.ChatActivity">
+    tools:context=".View.Chat.ChatActivity">
 
     <!-- <ImageButton
         android:id="@+id/btnBack"
