--- a/app/src/main/res/layout/activity_description_case.xml
+++ b/app/src/main/res/layout/activity_description_case.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="@color/white"
     android:layout_height="match_parent"
-    tools:context=".View.DescriptionCaseActivity">
+    tools:context=".View.NewCase.DescriptionCaseActivity">
 
     <ImageButton
         android:id="@+id/btnBack"
