--- a/app/src/main/res/layout/activity_lawyer_cases.xml
+++ b/app/src/main/res/layout/activity_lawyer_cases.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.LawyerCasesActivity">
+    tools:context=".View.Cases.LawyerCasesActivity">
 
     <include
         layout="@layout/toolbar"
