--- a/app/src/main/res/layout/activity_lawyer_code.xml
+++ b/app/src/main/res/layout/activity_lawyer_code.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".View.LawyerCodeActivity">
+    tools:context=".View.Login.LawyerCodeActivity">
 
     <ImageButton
         android:id="@+id/btnBack"
