--- a/app/src/main/res/layout/activity_list_chat.xml
+++ b/app/src/main/res/layout/activity_list_chat.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.ListChatActivity">
+    tools:context=".View.Chat.ListChatActivity">
 
     <include
         android:id="@+id/toolbar"
