--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="@color/colorPrimary"
     android:layout_height="match_parent"
-    tools:context=".View.LoginActivity">
+    tools:context=".View.Login.LoginActivity">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="0dp"
