--- a/app/src/main/res/layout/activity_name_register.xml
+++ b/app/src/main/res/layout/activity_name_register.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="@color/white"
     android:layout_height="match_parent"
-    tools:context=".View.NameRegisterActivity">
+    tools:context=".View.Login.NameRegisterActivity">
 
     <ImageButton
         android:id="@+id/btnBack"
