--- a/app/src/main/res/layout/activity_open_case.xml
+++ b/app/src/main/res/layout/activity_open_case.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.OpenCaseActivity">
+    tools:context=".View.Cases.OpenCaseActivity">
 
     <include
         android:id="@+id/toolbar"
