--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".View.SignUpActivity">
+    tools:context=".View.Login.SignUpActivity">
 
     <ImageButton
         android:id="@+id/btnBack"
