--- a/app/src/main/res/layout/activity_type_registration.xml
+++ b/app/src/main/res/layout/activity_type_registration.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".View.TypeRegistrationActivity">
+    tools:context=".View.Login.TypeRegistrationActivity">
 
     <ImageButton
         android:id="@+id/btnBack"
