--- a/app/src/main/res/layout/activity_view_user_profile.xml
+++ b/app/src/main/res/layout/activity_view_user_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.ViewUserProfileActivity">
+    tools:context=".View.Profile.ViewUserProfileActivity">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/rellay1"
