--- a/app/src/main/res/layout/activity_your_cases.xml
+++ b/app/src/main/res/layout/activity_your_cases.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".View.YourCasesActivity">
+    tools:context=".View.Cases.YourCasesActivity">
 
     <include
         android:id="@+id/toolbar"
