--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -269,6 +269,7 @@
 
                         <android.support.design.widget.TextInputEditText
                             android:id="@+id/etDDD"
+                            android:maxLength="2"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:inputType="phone" />
