--- a/app/src/main/res/layout/activity_edit_lawyer_profile.xml
+++ b/app/src/main/res/layout/activity_edit_lawyer_profile.xml
@@ -455,6 +455,7 @@
                         <android.support.design.widget.TextInputEditText
                             android:id="@+id/etCEP"
                             android:layout_width="match_parent"
+                            android:maxLength="8"
                             android:layout_height="wrap_content"
                             android:inputType="number" />
 
