--- a/app/src/main/res/layout/activity_edit_user_profile.xml
+++ b/app/src/main/res/layout/activity_edit_user_profile.xml
@@ -363,6 +363,7 @@
                             android:id="@+id/etCEP"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:maxLength="8"
                             android:inputType="number" />
 
                     </android.support.design.widget.TextInputLayout>
