--- a/app/src/main/res/layout/activity_view_lawyer_profile.xml
+++ b/app/src/main/res/layout/activity_view_lawyer_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.Profile.ViewUserProfileActivity">
+    tools:context=".View.Profile.ViewLawyerProfileActivity">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/rellay1"
@@ -15,6 +15,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/ivVerified"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="8dp"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="@+id/tvName"
+            app:layout_constraintStart_toEndOf="@+id/tvName"
+            app:layout_constraintTop_toTopOf="@+id/tvName"
+            app:srcCompat="@drawable/verified" />
 
         <ImageButton
             android:id="@+id/btnBack"
@@ -62,14 +75,14 @@
             app:layout_constraintTop_toBottomOf="@+id/ivImage" />
 
         <TextView
-            android:id="@+id/tvCityState"
+            android:id="@+id/tvOAB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:text="Cidade (UF)"
+            android:text="@string/loading"
             android:textColor="@color/white"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -78,13 +91,15 @@
             app:layout_constraintTop_toBottomOf="@+id/tvName" />
 
         <ImageView
+            android:id="@+id/imageView7"
             android:layout_width="18dp"
             android:layout_height="18dp"
             android:layout_marginEnd="8dp"
-            app:layout_constraintBottom_toBottomOf="@+id/tvCityState"
-            app:layout_constraintEnd_toStartOf="@+id/tvCityState"
-            app:layout_constraintTop_toTopOf="@+id/tvCityState"
-            app:srcCompat="@drawable/place" />
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="@+id/tvOAB"
+            app:layout_constraintEnd_toStartOf="@+id/tvOAB"
+            app:layout_constraintTop_toTopOf="@+id/tvOAB"
+            app:srcCompat="@drawable/law" />
 
 
     </android.support.constraint.ConstraintLayout>
@@ -93,6 +108,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_below="@+id/linlay1"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -243,7 +259,8 @@
 
                 </LinearLayout>
 
-                <!--<LinearLayout
+                <LinearLayout
+                    android:id="@+id/lvCurriculum"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
@@ -252,13 +269,15 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/tvCurriculum"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/soon"
+                        android:text="@string/mini_curriculum"
                         android:textColor="@color/colorAccent"
                         android:textSize="13sp" />
 
                     <TextView
+                        android:id="@+id/tvCurriculumMsg"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif-light"
@@ -272,7 +291,7 @@
                         android:layout_marginTop="15dp"
                         android:background="@color/colorGrey" />
 
-                </LinearLayout>-->
+                </LinearLayout>
 
 
             </LinearLayout>
