--- a/app/src/main/res/layout/activity_edit_lawyer_profile.xml
+++ b/app/src/main/res/layout/activity_edit_lawyer_profile.xml
@@ -217,6 +217,10 @@
                             android:id="@+id/etDate"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:clickable="false"
+                            android:cursorVisible="false"
+                            android:focusable="false"
+                            android:focusableInTouchMode="false"
                             android:inputType="date" />
 
                     </android.support.design.widget.TextInputLayout>
@@ -455,9 +459,9 @@
                         <android.support.design.widget.TextInputEditText
                             android:id="@+id/etCEP"
                             android:layout_width="match_parent"
-                            android:maxLength="8"
                             android:layout_height="wrap_content"
-                            android:inputType="number" />
+                            android:inputType="number"
+                            android:maxLength="8" />
 
                     </android.support.design.widget.TextInputLayout>
 
