--- a/app/src/main/res/layout/activity_edit_user_profile.xml
+++ b/app/src/main/res/layout/activity_edit_user_profile.xml
@@ -216,6 +216,10 @@
                             android:id="@+id/etDate"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:clickable="false"
+                            android:cursorVisible="false"
+                            android:focusable="false"
+                            android:focusableInTouchMode="false"
                             android:inputType="date" />
 
                     </android.support.design.widget.TextInputLayout>
@@ -269,10 +273,10 @@
 
                         <android.support.design.widget.TextInputEditText
                             android:id="@+id/etDDD"
-                            android:maxLength="2"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:inputType="phone" />
+                            android:inputType="phone"
+                            android:maxLength="2" />
 
                     </android.support.design.widget.TextInputLayout>
 
@@ -363,8 +367,8 @@
                             android:id="@+id/etCEP"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:maxLength="8"
-                            android:inputType="number" />
+                            android:inputType="number"
+                            android:maxLength="8" />
 
                     </android.support.design.widget.TextInputLayout>
 
