--- a/app/src/main/res/layout/message_left.xml
+++ b/app/src/main/res/layout/message_left.xml
@@ -7,8 +7,8 @@
 
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/ivImage"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="8dp"
@@ -25,7 +25,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:layout_toStartOf="@+id/ivImage"
         android:background="@drawable/message_left"
         android:padding="16dp"
@@ -34,5 +33,13 @@
         app:layout_constraintEnd_toStartOf="@+id/ivImage"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tvDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvMessage"
+        android:layout_marginEnd="7dp"
+        android:layout_toStartOf="@+id/ivImage" />
 
 </RelativeLayout>
