--- a/app/src/main/res/layout/activity_edit_lawyer_profile.xml
+++ b/app/src/main/res/layout/activity_edit_lawyer_profile.xml
@@ -193,6 +193,7 @@
 
                         <android.support.design.widget.TextInputEditText
                             android:id="@+id/etCPF"
+                            android:maxLength="14"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:inputType="numberDecimal" />
@@ -342,6 +343,7 @@
 
                     <TextView
                         android:id="@+id/tvPhone"
+                        android:maxLength="10"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@color/colorAccent"
@@ -461,7 +463,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:inputType="number"
-                            android:maxLength="8" />
+                            android:maxLength="9" />
 
                     </android.support.design.widget.TextInputLayout>
 
